[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
iif = { path = "../iif" }
ad = { path = "../ad" }
clap = { version = "4.5.3", features = ["derive"] }
